# KVQuant

./: README.md
benchmarking/: README.md  cache-llama-activations.py
benchmarking/kvquant/: quant_cuda.cpp  quant_cuda_kernel.cu  simquant_module_quantizer.py
benchmarking/scripts/: test_kernel_baselines.py  test_kernel_benchmark_K_plus_rope.py  test_kernels_key.py  test_kernels_key_packing.py  test_kernels_value.py  test_kernels_value_packing.py  test_offload_topk.py
deployment/: README.md  cache-llama-activations.py  llama.py  pyproject.toml
deployment/kvquant/: model_parse.py  quant_cuda.cpp  quant_cuda_kernel.cu
deployment/scripts/: test_kernel_baselines.py  test_kernel_benchmark_K_plus_rope.py  test_kernels_key.py  test_kernels_key_packing.py  test_kernels_value.py  test_kernels_value_packing.py  test_offload_topk.py
deployment/transformers/: README.md  datautils.py
deployment/transformers/src/transformers.egg-info/: PKG-INFO  SOURCES.txt
deployment/transformers/src/transformers/generation/: utils.py
deployment/transformers/src/transformers/models/llama/: configuration_llama.py  modeling_llama.py
gradients/: README.md  requirements.txt  run-fisher.py
lwm/: README.md  eval_haystack_pytorch_quant.py  llama_inference.py
quant/: README.md  dbrx_simquant.py  eval_passkey_simquant.py  llama_simquant.py  pyproject.toml
quant/dbrx/src/transformers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quant/dbrx/src/transformers/models/dbrx/: modeling_dbrx.py
quant/kvquant/: model_parse.py  simquant_module_quantizer.py  simquant_module_quantizer_dbrx.py
(+4 files in other folders)
