[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kvquant"
version = "0.1.0"
description = "KV Cache Quantization."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate",
    "sentencepiece",
    "torch",
    "datasets"
]

[tool.setuptools.packages.find]
